--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 /* Navbar */
 .navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 1rem 2rem;
   background-color: #ffffff;
